aux_source_directory(. DIR_SRCS)
include_directories(../libs)
include(GoogleTest)

add_executable(unit_test ${DIR_SRCS})

target_link_libraries(unit_test PRIVATE gtest)
target_link_libraries(unit_test PRIVATE gmock)
target_link_libraries(unit_test PRIVATE runtime)
target_link_libraries(unit_test PRIVATE cli)
target_link_libraries(unit_test PRIVATE stdc++fs)
target_link_libraries(unit_test PRIVATE ${Boost_LIBRARIES})
gtest_discover_tests(unit_test)
configure_file(./bundle/config.json ../tests/bundle/config.json COPYONLY)
configure_file(./config/gridConfig.json ../tests/config/gridConfig.json COPYONLY)
configure_file(./create_container.sh ../tests/create_container.sh COPYONLY)